[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GodotLoadScreenFinal/GodotStartupScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GodotLoadScreenFinal/FlickeringLightSound.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/GodotLoadScreenFinal/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/GodotLoadScreenFinal/GodotLogoStartup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Perry/Perry.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[node name="GodotStartupScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.156863, 0.192157, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
modulate = Color( 1.1, 1.1, 1.2, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.948
margin_top = -81.6618
margin_right = 159.052
margin_bottom = 238.338
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 160, 160 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Made" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -48.0
margin_right = -3.0
margin_bottom = -32.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "MADE"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="With" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -48.0
margin_right = 69.0
margin_bottom = -32.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 2 )
text = "With"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Godot" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 28.9126
margin_right = 40.0
margin_bottom = 44.9126
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 3 )
text = "godot"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotAnimatedSprite" parent="Control" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1.3, 1 )
position = Vector2( 160, 160 )
z_index = 3

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="ChangeSceneTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.3
one_shot = true

[node name="AnimationPlayTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.41
one_shot = true
autostart = true

[node name="LightFlickerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SoundEffects"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="KinematicBody2D" parent="CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 540, 960 )
state = 4

[connection signal="animation_finished" from="Control/GodotAnimatedSprite" to="." method="_on_GodotAnimatedSprite_animation_finished"]
[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_ChangeSceneTimer_timeout"]
[connection signal="timeout" from="AnimationPlayTimer" to="." method="_on_AnimationPlayTimer_timeout"]
